# radio-basecamp

./: .gitignore  CLAUDE.md  PROJECT_KNOWLEDGE.md  README.md
docs/: BRIEF.md  CONNECTING-OBS.md  retro-log.md
docs/plans/: radio-implementation.md  tor-onion.md
radio_app/: CMakeLists.txt  flake.nix  metadata.json
radio_app/src/: radio.rep  radio_interface.h  radio_plugin.cpp  radio_plugin.h
radio_app/src/qml/: Main.qml
radio_module/: CMakeLists.txt  flake.nix  metadata.json
radio_module/src/: radio_interface.h  radio_plugin.cpp  radio_plugin.h
radio_module/tests/: CMakeLists.txt  direct_test.cpp  run-direct-test.sh  run-headless-tests.sh  test_radio.cpp
radio_module/tests/mocks/: radio_events_stub.cpp
radio_ui/: Main.qml  flake.nix  metadata.json
radio_ui/tests/: ui-tests.mjs
